17-Oct-2021 - V0.30 Update hierarchical search path for models in RepositoryProvider()
17-Mar-2022 - V0.31 Update hierarchical search path for models in RepositoryProvider(), and use configured PDBX_COMP_MODEL_REPO_PATH value for topRepoPath;
                    Update HoldingsProvider classes to address issues with remote data loading
28-Mar-2022 - V0.32 Resolve Pylint issues
 5-Apr-2022 - V0.33 Add support in RepositoryProvider for loading id code lists for bird_chem_comp_core (mainly used for Azure testing)
13-Apr-2022 - V0.34 Update RepositoryProvider methods for obtaining list of computed-model files;
                    Update getSupersededBy method to recursively return all superseded entries
20-Apr-2022 - V0.35 Fix issue in RepositoryProvider for mapping source and internal computed-model IDs
03-Aug-2022 - V0.36 Enable retrieval of specific model files with input
23-Dec-2022 - V0.37 Configuration changes to support tox 4
14-Feb-2023 - V0.38 Add support for requesting specific inputIdCodeList/idCodeList for CSMs
22-Mar-2023 - V0.39 Update references to py-rcsb_exdb_assets master branch
19-May-2023 - V0.40 Update DNS to PDB archive
12-Jun-2023 - V0.41 Disable useCache for holdings files to force re-download
05-Mar-2024 - V0.42 Adjust RepositoryProvider to support BCIF loading and CSM scaling
19-Mar-2024 - V0.43 Raise exception and return empty list if not all dataContainers are properly read from file in __mergeContainers()
29-May-2024 - V0.44 Fix pylinting
 1-Jul-2024 - V0.45 Update CurrentHoldingsProvider to stop including DSN6 maps
 9-Sep-2024 - V0.46 Always defer to loading holdings data from remote (rather than storing it locally);
                    Add validation coefficients to list of repository_content_types
22-Oct-2024 - V0.47 Remove dependency on edmaps holdings file (no longer generating Map Coefficient MTZ files);
                    Update CI/CD testing to use python 3.10
 7-Jan-2025 - V0.48 Handle validation data loading from mmCIF file